--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=fiap-tech-challenge
-spring.datasource.url=jdbc:h2:mem:database
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=tech
-spring.datasource.password=challenge
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
+
+# H2
+#spring.datasource.url=jdbc:h2:mem:database
+#spring.datasource.username=tech
+#spring.datasource.password=challenge
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/tech-challenge
+spring.datasource.username=admin
+spring.datasource.password=5qtX6EUZLFhdzni6
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
