--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tech-challenge
 spring.datasource.username=admin
 spring.datasource.password=5qtX6EUZLFhdzni6
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Subir um container docker com o MySQL
+#docker run --name mysql -e MYSQL_ROOT_PASSWORD=33DLtmGBKcAdjZze -e MYSQL_DATABASE=tech-challenge -e MYSQL_USER=admin -e MYSQL_PASSWORD=5qtX6EUZLFhdzni6 -p 3306:3306 -d mysql:8.0
